<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:id="@id/container">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:cardElevation="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/streak_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="70sp"
                app:layout_constraintTop_toBottomOf="@id/diamonds_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

            <TextView
                android:id="@+id/streak_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_s"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@id/streak_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"

                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/diamonds_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+0💎"
                android:textSize="40sp"
                app:layout_constraintTop_toTopOf="parent"
                android:rotation="35"
                android:textColor="@color/default_color"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toEndOf="@id/streak_number"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tomorrow_claim_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/streak_text"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                />


            <TextView
                android:id="@+id/animation_anchor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/earth_2"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/default_color"
        />

    <Button
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/default_color"
        android:text="@string/Share"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/continue_button" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp">

        <ProgressBar
            android:id="@+id/progressStreak"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:progressTint="@color/default_color"
            android:scaleY="8" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>